updating uv and specs
